--- a/src/main/resources/fxml/product_view.fxml
+++ b/src/main/resources/fxml/product_view.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+<AnchorPane fx:controller="com.inventory.controller.ProductController" minHeight="0.0" minWidth="0.0" prefHeight="725.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane prefHeight="693.5" prefWidth="1026.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -18,12 +27,12 @@
             <children>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" GridPane.columnIndex="1">
                     <children>
-                        <TableView layoutY="14.0" prefHeight="693.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="productTable" layoutY="14.0" prefHeight="693.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn prefWidth="46.0" text="Id" />
-                                <TableColumn prefWidth="152.0" text="Name" />
-                                <TableColumn prefWidth="88.0" text="Category" />
-                                <TableColumn prefWidth="117.0" text="Unit Price" />
+                                <TableColumn fx:id="idColumn" prefWidth="46.0" text="Id" />
+                                <TableColumn fx:id="nameColumn" prefWidth="152.0" text="Name" />
+                                <TableColumn fx:id="categoryColumn" prefWidth="88.0" text="Category" />
+                                <TableColumn fx:id="unitPriceColumn" prefWidth="117.0" text="Unit Price" />
                                 <TableColumn prefWidth="109.0" text="Action" />
                             </columns>
                         </TableView>
@@ -44,7 +53,7 @@
                                 <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <TextField maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1">
+                                <TextField id="nameField" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1">
                                     <font>
                                         <Font size="18.0" />
                                     </font>
@@ -62,7 +71,7 @@
                                         <Font size="18.0" />
                                     </font>
                                 </Label>
-                                <ComboBox maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" promptText="Select" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <ComboBox id="categoryBox" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <Label text="Description" GridPane.rowIndex="2">
                                     <font>
                                         <Font size="18.0" />
@@ -73,12 +82,12 @@
                                         <Font size="18.0" />
                                     </font>
                                 </Label>
-                                <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                <TextArea id="descField" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                     <GridPane.margin>
                                         <Insets bottom="7.0" top="7.0" />
                                     </GridPane.margin>
                                 </TextArea>
-                                <TextField layoutX="161.0" layoutY="17.0" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                <TextField id="priceField" layoutX="161.0" layoutY="17.0" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                     <font>
                                         <Font size="18.0" />
                                     </font>
@@ -86,7 +95,7 @@
                                         <Insets />
                                     </opaqueInsets>
                                 </TextField>
-                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Button id="saveBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                             </children>
                         </GridPane>
                     </children>
