--- a/src/main/resources/fxml/product_view.fxml
+++ b/src/main/resources/fxml/product_view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:controller="com.inventory.controller.ProductController" minHeight="0.0" minWidth="0.0" prefHeight="725.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="725.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.inventory.controller.ProductController">
     <children>
         <GridPane prefHeight="693.5" prefWidth="1026.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -33,14 +33,14 @@
                                 <TableColumn fx:id="nameColumn" prefWidth="152.0" text="Name" />
                                 <TableColumn fx:id="categoryColumn" prefWidth="88.0" text="Category" />
                                 <TableColumn fx:id="unitPriceColumn" prefWidth="117.0" text="Unit Price" />
-                                <TableColumn prefWidth="109.0" text="Action" />
+                                <TableColumn fx:id="actionColumn" prefWidth="109.0" text="Action" />
                             </columns>
                         </TableView>
                     </children>
                 </AnchorPane>
                 <AnchorPane>
                     <children>
-                        <GridPane layoutX="20.0" layoutY="91.0" prefHeight="346.0" prefWidth="473.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+                        <GridPane layoutX="24.0" layoutY="93.0" prefHeight="344.0" prefWidth="469.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="20.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.99508666992188" minWidth="10.0" prefWidth="144.53240966796875" />
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="381.123779296875" minWidth="10.0" prefWidth="315.0638427734375" />
@@ -53,9 +53,9 @@
                                 <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <TextField id="nameField" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1">
+                                <TextField fx:id="nameField" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" GridPane.columnIndex="1">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                     <opaqueInsets>
                                         <Insets />
@@ -63,39 +63,45 @@
                                 </TextField>
                                 <Label text="Product Name">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                 </Label>
                                 <Label layoutX="10.0" layoutY="26.0" text="Category" GridPane.rowIndex="1">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <ComboBox id="categoryBox" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <ComboBox fx:id="categoryField" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <Label text="Description" GridPane.rowIndex="2">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                 </Label>
                                 <Label layoutX="10.0" layoutY="143.0" text="Unit Price" GridPane.rowIndex="3">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <TextArea id="descField" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                <TextArea fx:id="descriptionField" maxHeight="200.0" maxWidth="320.0" prefHeight="200.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                     <GridPane.margin>
                                         <Insets bottom="7.0" top="7.0" />
                                     </GridPane.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                                 </TextArea>
-                                <TextField id="priceField" layoutX="161.0" layoutY="17.0" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                <TextField fx:id="unitPriceField" layoutX="161.0" layoutY="17.0" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                     <opaqueInsets>
                                         <Insets />
                                     </opaqueInsets>
                                 </TextField>
-                                <Button id="saveBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Button fx:id="saveBtn" disable="true" maxWidth="320.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="38.0" prefWidth="320.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <font>
+                              <Font size="16.0" />
+                           </font></Button>
                             </children>
                         </GridPane>
                     </children>
