--- a/src/main/resources/fxml/stock_view.fxml
+++ b/src/main/resources/fxml/stock_view.fxml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="725.0" prefWidth="1026.0">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="725.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.inventory.controller.StockController">
     <children>
         <GridPane prefHeight="693.5" prefWidth="1026.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="508.0" minWidth="10.0" prefWidth="491.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="575.0" minWidth="10.0" prefWidth="535.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -18,12 +26,14 @@
             <children>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" GridPane.columnIndex="1">
                     <children>
-                        <TableView layoutY="14.0" prefHeight="693.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="stockTable" layoutY="14.0" prefHeight="693.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="Id" />
-                                <TableColumn prefWidth="169.0" text="Name" />
-                                <TableColumn prefWidth="123.0" text="Category" />
-                                <TableColumn prefWidth="145.0" text="Current Stock" />
+                                <TableColumn fx:id="idColumn" prefWidth="75.0" text="Id" />
+                                <TableColumn fx:id="nameColumn" prefWidth="91.0" text="Name" />
+                                <TableColumn fx:id="categoryColumn" prefWidth="100.0" text="Category" />
+                                <TableColumn fx:id="stockColumn" prefWidth="98.0" text="Current Stock" />
+                        <TableColumn fx:id="priceColumn" maxWidth="185.0" prefWidth="77.0" text="Unit Price" />
+                        <TableColumn fx:id="totalPriceColumn" maxWidth="100.0" prefWidth="100.0" text="Total Price" />
                             </columns>
                         </TableView>
                     </children>
@@ -42,24 +52,22 @@
                                 <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Label text="Product">
+                                <Label layoutX="10.0" layoutY="26.0" text="Quantity" GridPane.rowIndex="2">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <Label layoutX="10.0" layoutY="26.0" text="Quantity" GridPane.rowIndex="1">
+                                <ComboBox fx:id="productField" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" promptText="Select" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <Label layoutX="10.0" layoutY="143.0" text="Action Type">
                                     <font>
-                                        <Font size="18.0" />
+                                        <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <ComboBox maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" promptText="Select" GridPane.columnIndex="1" />
-                                <Label layoutX="10.0" layoutY="143.0" text="Action Type" GridPane.rowIndex="2">
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font>
-                                </Label>
-                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                <TextField layoutX="161.0" layoutY="246.0" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <Button fx:id="saveBtn" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSave" prefHeight="38.0" text="Save" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="16.0" />
+                           </font></Button>
+                                <TextField fx:id="quantityField" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                     <font>
                                         <Font size="18.0" />
                                     </font>
@@ -67,7 +75,12 @@
                                         <Insets />
                                     </opaqueInsets>
                                 </TextField>
-                                <ComboBox layoutX="161.0" layoutY="15.0" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" promptText="Select" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <Label text="Product" GridPane.rowIndex="1">
+                                    <font>
+                                        <Font size="16.0" />
+                                    </font>
+                                </Label>
+                                <ComboBox fx:id="actionField" maxHeight="38.0" maxWidth="320.0" prefHeight="38.0" prefWidth="320.0" promptText="Select" GridPane.columnIndex="1" />
                             </children>
                         </GridPane>
                     </children>
