--- a/src/main/resources/fxml/report_view.fxml
+++ b/src/main/resources/fxml/report_view.fxml
@@ -22,6 +22,44 @@
                 <RowConstraints maxHeight="629.0" minHeight="10.0" prefHeight="629.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="704.0" minWidth="10.0" prefWidth="685.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="509.0" minWidth="10.0" prefWidth="341.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                          <children>
+                              <DatePicker fx:id="fromDateField" promptText="From Date" />
+                              <DatePicker fx:id="toDateField" promptText="To Date" />
+                              <Button fx:id="filterBtn" disable="true" mnemonicParsing="false" onAction="#handleFilter" text="Filter">
+                                  <padding>
+                                      <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                                  </padding>
+                              </Button>
+                        <Button fx:id="resetBtn" disable="true" layoutX="421.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleReset" text="Reset">
+                           <padding>
+                              <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                           </padding>
+                        </Button>
+                          </children>
+                          <padding>
+                              <Insets left="20.0" />
+                          </padding>
+                      </HBox>
+                  <Button fx:id="refreshBtn" mnemonicParsing="false" onAction="#handleRefresh" text="Refresh " GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets right="20.0" />
+                     </GridPane.margin>
+                     <padding>
+                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                     </padding>
+                  </Button>
+               </children>
+            </GridPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" GridPane.rowIndex="1">
                     <children>
                         <TableView fx:id="reportTable" layoutY="14.0" prefHeight="693.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -35,25 +73,6 @@
                         </TableView>
                     </children>
                 </AnchorPane>
-                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                    <children>
-                        <DatePicker fx:id="fromDateField" promptText="From Date" />
-                        <DatePicker fx:id="toDateField" promptText="To Date" />
-                        <Button fx:id="filterBtn" disable="true" mnemonicParsing="false" onAction="#handleFilter" text="Filter">
-                            <padding>
-                                <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-                            </padding>
-                        </Button>
-                  <Button fx:id="resetBtn" disable="true" layoutX="421.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleReset" text="Reset">
-                     <padding>
-                        <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-                     </padding>
-                  </Button>
-                    </children>
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                </HBox>
             </children>
         </GridPane>
     </children>
